Fix form-submitted background image not showing on phones by altering background settings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -903,9 +903,9 @@ margin-bottom: 10px;
 
 #form-submitted {
   background-image: url('/assets/images/submitted-hero.webp');
-  background-size: cover;
+  background-size: auto 100%;
+  background-position-x: 50%;
   background-attachment: fixed;
-  width: 100%;
   background-position: 50%;
   height: 750px;
   text-align: center;
